@@ -1,4 +1,4 @@
-/* $Id: screen-redraw.c,v 1.23 2009-02-11 17:50:33 nicm Exp $ */
+/* $Id: screen-redraw.c,v 1.24 2009-02-11 23:16:41 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -134,6 +134,11 @@ screen_redraw_line(struct client *c, struct screen *s, u_int oy, u_int py)
 	sx = screen_size_x(s);
 	if (sx > c->tty.sx)
 		sx = c->tty.sx;
+	if (c->tty.term->flags & TERM_EARLYWRAP) {
+		/* Work around weirdness by omitting bottom right character. */
+		if (oy + py == c->tty.sy - 1 && sx == c->tty.sx)
+			sx--;
+	}
 	for (i = 0; i < sx; i++) {
 		gc = grid_view_peek_cell(s->grid, i, py);
  		tty_cursor(&c->tty, i, py, oy);
