@@ -1,5 +1,12 @@
 11 February 2009
 
+* FreeBSD's console wraps lines at $COLUMNS - 1 rather than $COLUMNS (the
+  cursor can never be beyond $COLUMNS - 1) and does not appear to support
+  changing this behaviour, or any of the obvious possibilities (turning off
+  right margin wrapping, insert mode). This is irritating, most notably because
+  it impossible to write to the very bottom-right of the screen without
+  scrolling. To work around this, if built on FreeBSD and run with a "cons"
+  $TERM, the bottom-right cell on the screen is omitted.
 * Emulate scroll regions (slowly) to support the few terminals which don't have
   it (some of which don't really have any excuse).
 
@@ -1095,7 +1102,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.251 2009-02-11 19:06:56 nicm Exp $
+$Id: CHANGES,v 1.252 2009-02-11 23:16:41 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
